2018-08-02  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-07-00.
	* May and June updates of publications.
2018-05-15  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-06-00.
	* April updates of publications.
	* Start adding copyright statements and LICENSE so code can be made public.
	* atlas_physics has a UK and a US version.
	* Make \dif language sensitive.
2018-05-04  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-05-00.
	* March updates of publications.
	* Moved all old/obsolete style files to an obsolete directory.
	* Move bst directory with traditional BibTeX style files to obsolete.
	* Added \NIMA as a journal.
2018-03-16  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-04-00.
	* February updates of publications.
	* Add bookmarks to PDF file via hyperref.
	* Add a script atlaslatex_update.sh to be able to update your atlaslatex version.
	* Move old logos to an obsolete directory.
	* Move obsolete style files to same directory.
	* Move lineno.sty and authblk.sty to same directory.
2018-02-20  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-03-00.
	* January updates of publications.
	* Updated acknowledgements.
	* Fix language editor comments so that they also work in captions etc.
	* Tables document has captions above table.
2018-01-11  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-02-02.
	* December updates of publications.
	* Allow both cernpreprint and PAPER options.
	* Adjust some definitions to follow ATLAS Style Guide.
	* Added \tauhad, \taulep, \tauhadvis and \taup definitions.
	* Added \xspace to journal names in atlasjournal.sty.
	* Move \pileup to atlasmisc.sty.
	* \KT from atlasmisc.sty now \kperp.
	* \RcaloM now \Rcalom
2017-12-12  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-01-03.
	* CERN preprint ID corrected.
2017-11-30  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-01-02.
	* November update of publications.
	* Abstract in BOOK now properly justified.
	* Add atlascomment package for language editors.