@@ -5,7 +5,7 @@
 % Specify where ATLAS LaTeX style files can be found.
 \newcommand*{\ATLASLATEXPATH}{../../latex/}
 %-------------------------------------------------------------------------------
-\documentclass[mhchem,UKenglish,texlive=2016]{\ATLASLATEXPATH atlasdoc}
+\documentclass[mhchem, UKenglish, texlive=2016]{\ATLASLATEXPATH atlasdoc}
 
 % Standard packages that can and should be used in ATLAS papers
 \usepackage[default, backend=biber]{\ATLASLATEXPATH atlaspackage}
@@ -16,7 +16,7 @@
 % Include all style files
 \usepackage[BSM, hion, jetetmiss,
   journal, math, misc, other, hepparticle=false, particle,
-  hepprocess=false, process, unit, xref]{\ATLASLATEXPATH atlasphysics}
+  hepprocess=false, process, snippets, unit, xref]{\ATLASLATEXPATH atlasphysics}
 %\usepackage{\ATLASLATEXPATH atlasheavyion-mod}
 
 \input{atlas_physics_defs}
