@@ -4,7 +4,10 @@
 \label{sec:change}
 %-------------------------------------------------------------------------------
 
-\textbf{Version 01-08-01} of \Package{atlaslatex} includes quite a few definitions from the Jet/ETmiss group.
+\textbf{Version 05-08-00} of \Package{atlaslatex} includes a new \File{atlassnippets.sty} style file.
+This is supposed to contain snippets of text that are useful in many papers and/or notes.
+
+\textbf{Version 01-08-01} of \Package{atlaslatex} includes quite a few definitions from the Jet/Etmiss group.
 A new style file has been created \File{atlasjetetmiss.sty} that is not included by default.
 Some of the definitions from the Jet/ETmiss group are of more general use and so have been merged into existing style files:
 \begin{description}
