@@ -1,4 +1,5 @@
 % Files with references in BibTeX format and biblatex style options
+\addbibresource{../../bib/ATLAS.bib}
 \addbibresource{atlas_physics.bib}
 
 \graphicspath{{../../logos/}}
