@@ -1,4 +1,15 @@
 \newpage
+\onecolumn
+%-------------------------------------------------------------------------------
+\section{\File{atlassnippets.sty}}
+
+Turn on including these definitions with the option \Option{snippets} and off with the option \Option{snippets=false}.
+
+\input{atlassnippets}
+\twocolumn
+
+
+\newpage
 %-------------------------------------------------------------------------------
 \section{\File{atlasunit.sty}}
 
