@@ -1,0 +1,7 @@
+\begin{xtabular}{lp{10cm}}
+\verb|\AntiktSnippet| & \AntiktSnippet \\
+\verb|\TopoclusteringSnippet| & \TopoclusteringSnippet \\
+\verb|\GroomingSnippet| & \GroomingSnippet \\
+\verb|\FastSimSnippet| & \FastSimSnippet \\
+\verb|\PileupSnippet| & \PileupSnippet \\
+\end{xtabular}
