@@ -849,20 +849,25 @@
 % \addtolength{\abstractparbox}{-2\fboxsep}
 \newlength{\abstractheight}
 \setlength{\abstractheight}{0.50\textheight}
+% Add 5em to title height for notes
+% \ifADOC@NOTE
+%   \addtolength{\abstractheight}{-5em}
+% \fi
 \addtolength{\abstractheight}{-\ADOC@titleextraheight}
 \newlength{\copyrightoffset}
 \ifthenelse{\equal{\ADOC@maintitlesize}{small}}{%
-  \setlength{\copyrightoffset}{-7.5em}
+  \setlength{\copyrightoffset}{-8.0em}
 }{%
-  \setlength{\copyrightoffset}{-7.5em}
+  \setlength{\copyrightoffset}{-8.0em}
 }
 \addtolength{\copyrightoffset}{\ADOC@copyrightoffset}
 \newcommand{\AtlasAbstractCopyright}{%
-  \vspace*{\stretch{1}}
+  % \vspace*{\stretch{1}}
   % \fbox{\begin{minipage}[b][\abstractheight]{\abstractparbox}
   \begin{minipage}[b][\abstractheight]{\abstractparbox}
-    % Astract
-    \if\AtlasAbstractText\@empty
+    % Abstract
+  % \vspace*{\stretch{1}}
+  \if\AtlasAbstractText\@empty
       \mbox{}
     \else
       \begin{quote}\ADOC@abstractsize
@@ -953,6 +958,7 @@
   \fi
 \else
   \publishers{\vspace*{\fill}\normalsize\rmfamily\AtlasAbstractCopyright}
+  % \publishers{\normalsize\rmfamily\AtlasAbstractCopyright}
 \fi
 
 \AtBeginDocument{%
