@@ -52,7 +52,8 @@
 % See doc/atlas_physics.pdf for a list of the defined symbols.
 % Default options are:
 %   true:  journal, misc, particle, unit, xref
-%   false: BSM, heppparticle, hepprocess, hion, jetetmiss, math, process, other, texmf
+%   false: BSM, heppparticle, hepprocess, hion, jetetmiss, math, process,
+%          other, snippets, texmf
 % See the package for details on the options.
 
 % Files with references for use with biblatex.
